[package]
name = "wave_rush"
version = "0.1.0"
edition = "2021"

[dependencies]
aligned-vec = "0.6.4"
bytemuck = { version = "1.23.1", features = ["derive"] }
enum_dispatch = "0.3.13"
fallible-streaming-iterator = "0.1.9"
thiserror = "2.0.12"

[dev-dependencies]
rand = "0.9.0"

[profile.release]
codegen-units = 1
opt-level = 3
lto = 'fat'
debug = true
